cli/tests/snapshot/inputs/errors/blame_custom_message_ansi_escaping.ncl
# capture = 'stderr'
# command = []
null | std.FailWith "\x1B[9;33;47m strike through with background \"and\" \"quotes\""
